# majora

./: .codacy.yml  .env.dev.sample  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  version
backend/: conftest.py  pyproject.toml
backend/.claude/state/: auto-fix-all-queue.json
backend/accounts/: __init__.py  account_uniqueness.py  apps.py  authentication.py  url_builder.py  urls.py
backend/accounts/migrations/: 0001_initial.py  __init__.py
backend/accounts/models/: __init__.py  password_reset_token.py  user_profile.py
backend/accounts/serializers/: __init__.py
backend/accounts/tests/: __init__.py  authentication_test.py  url_builder_test.py
backend/accounts/views/: __init__.py
backend/conversations/: __init__.py  apps.py
backend/conversations/migrations/: 0001_initial.py  __init__.py
backend/conversations/models/: __init__.py  conversation.py  conversation_participant.py  message.py  message_visualisation.py
backend/conversations/tests/: __init__.py
backend/games/: access_route_config.py  account_uniqueness.py  admin.py  gravatar.py  middleware.py  permissions.py  photo_path.py  poll_close_writer.py  poll_vote_writer.py  session_message_paginator.py  settings.py  url_builder.py
backend/games/caches/: __init__.py  admin_or_staff_cache.py  boolean_check_cache.py  character_editor_cache.py  game_player_cache.py
backend/games/migrations/: 0005_create_link.py  0008_character_npc.py  0009_character_class_nullable.py  0011_create_password_reset_token.py  0013_player_user.py  0015_character_descriptions.py  0016_gamephoto.py  0017_upload.py  0019_upload_content_type_upload_object_id.py  0020_character_hidden.py  0021_characterlink.py  0023_treasure.py  0024_game_treasures.py  0026_remove_gamephoto_url_game_cover_photo.py  0028_remove_character_avatar_url_remove_game_photo.py  0029_character_money.py  0030_treasurephoto_treasure_photo.py  0034_charactertreasure.py  0035_alter_charactertreasure_unique_together.py  0041_character_public_slain.py  0042_poll_polloption_pollvote.py  0043_gamesession_description.py  0044_game_game_type.py  0045_treasure_game_type.py  0046_userprofile_email_hash.py  0047_gamesessionmessage.py  0048_alter_gamesessionmessage_content.py  0049_poll_description_poll_title.py  0050_alter_poll_description.py  0051_poll_option_type.py  0052_poll_content_type_poll_object_id.py  0053_pollvote_user.py  0054_polloption_selected.py  0055_gametreasure_value.py  0056_alter_gametreasure_value_not_null.py  0057_charactertreasure_total_value.py  0058_gametreasure_hidden.py  0059_backfill_gametreasure_hidden.py  0060_remove_treasure_hidden.py  0061_userprofile_display_name.py  (+11 more)
backend/games/models/: __init__.py  base_photo.py  character.py  character_photo.py  game.py  game_master.py  link.py  player.py  task.py  user_profile.py
backend/games/poll_close_processors/: __init__.py  session_close_processor.py
backend/games/serializers/: __init__.py  _request_context_mixin.py  base_access.py  base_permissions.py  character_create.py  character_detail.py  character_full_list.py  character_list.py  game_photo.py  game_task_update.py  game_treasure_fields.py  hidden_field_mixin.py  pc_access.py  staff_user_list.py  treasure_detail.py
backend/games/tests/: __init__.py  behaviors.py  factories.py  gravatar_test.py  migration_state.py  permissions_test.py  photo_path_test.py  session_message_paginator_test.py  (+2 more)
backend/majora_project/: env.py  settings.py  settings_test.py  urls.py
backend/statistics/: admin.py  apps.py  cookies.py  middleware.py  models.py  session_attachment.py  settings.py
backend/versioning/: __init__.py  admin.py  apps.py
source/: conftest.py  manage.py  pyproject.toml
source/games/: __init__.py  access_route_config.py  admin.py  apps.py  authentication.py  middleware.py  models.py  paginator.py  permissions.py  serializers.py  settings.py  urls.py  views.py
source/majora_project/: __init__.py  settings.py  settings_test.py  urls.py  wsgi.py
source/versioning/: admin.py
(+4321 files in other folders)
