[tool.poetry]
name = "majora"
version = "0.40.4"
description = "Majora - RPG Campaign Management System"
authors = ["darthjee"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
mysqlclient = "^2.2"
gunicorn = "^21.2"
djangorestframework = "^3.14"
django-cors-headers = "^4.3"
django-simple-history = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-django = "^4.8"
ruff = "^0.3"
radon = "^6.0"
xenon = "^0.9"
lizard = "^1.17"
factory-boy = "^3.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "majora_project.settings_test"
pythonpath = ["."]
testpaths = ["games/tests", "versioning/tests"]
python_files = ["*_test.py"]

[tool.coverage.run]
source = ["games", "versioning"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
omit = ["*/migrations/*", "*/tests/*"]

[tool.bandit]
exclude_dirs = ["games/tests", "backend/games/tests", "versioning/tests", "backend/versioning/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D211", "D106"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

